[gd_scene load_steps=9 format=3 uid="uid://hgrmaqq3p8gk"]

[ext_resource type="Script" uid="uid://dke0e3xft8lwi" path="res://scenes/plant/plant.gd" id="1_gm68k"]
[ext_resource type="Texture2D" uid="uid://dfx2gj5vldw3x" path="res://scenes/plant/assets/tileset.png" id="3_85esa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4t85h"]
atlas = ExtResource("3_85esa")
region = Rect2(128, 250, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm68k"]
atlas = ExtResource("3_85esa")
region = Rect2(64, 220, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_85esa"]
atlas = ExtResource("3_85esa")
region = Rect2(0, 214, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf3g8"]
atlas = ExtResource("3_85esa")
region = Rect2(0, 214, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_53d6k"]
atlas = ExtResource("3_85esa")
region = Rect2(0, 214, 64, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_gm68k"]

[node name="Plant" type="Area2D"]
collision_layer = 2
script = ExtResource("1_gm68k")

[node name="Step1" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_4t85h")

[node name="Step2" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_gm68k")

[node name="Step3" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_85esa")

[node name="Step4" type="Sprite2D" parent="."]
modulate = Color(0.283312, 0.509887, 0.559423, 1)
texture = SubResource("AtlasTexture_hf3g8")

[node name="Step5" type="Sprite2D" parent="."]
modulate = Color(0.283577, 0.110607, 0.0352141, 1)
texture = SubResource("AtlasTexture_53d6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gm68k")
